# testncod

./: .gitignore  README.md  VirtualHere-api-及其他说明.txt  bug.txt  cleanup.py  完善事项.txt  开发计划.md  需求.md
ncod/: .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  cli.py  config.yaml  docker-compose.yml  main.py  nginx.conf  prometheus.yml  pyproject.toml
ncod/api/: device_auth.py  openapi.yaml
ncod/config/: settings.py
ncod/core/: architecture.md  auth.py  cache.py  config.py  db.py  deps.py  device.py  events.py  factory.py  features.md  heartbeat.py  key_manager.py  log.py  logger.py  monitor.py  security.py  websocket.py
ncod/db/: __init__.py  config.py  create_db.py
ncod/deploy/: docker-compose.yml
ncod/docs/: project_structure.md
ncod/frontend/: .env.development  .env.production  .eslintrc.cjs  .eslintrc.js  .gitignore  .npmrc  .prettierrc  .prettierrc.js  .prettierrc.json  README.md  components.d.ts  env.d.ts  index.html  jsconfig.json  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
ncod/master/: .env.example  Dockerfile  __init__.py  app.py  auth.py  backup_manager.py  cache.py  cache_manager.py  config.py  config_manager.py  database.py  device_alert.py  device_logger.py  device_manager.py  device_monitor.py  device_notifier.py  device_permission.py  device_scheduler.py  device_stats.py  device_sync.py  docker-compose.yml  exceptions.py  health_manager.py  log_manager.py  main.py  models.py  pyproject.toml  requirements.txt  run.py  scheduler_manager.py  setup.py  slave_manager.py  ssl_manager.py  (+2 more)
(+757 files in other folders)
